# Meteorologia-GPX

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
meteorologia_gpx/: charts.py  geospatial.py  gpx_processor.py  style_utils.py  weather_client.py
src/: charts.py  geospatial.py  weather_client.py
tests/: test_geospatial.py  test_gpx_processor.py  test_weather_client.py
