[project]
name = "meteorologia-gpx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpxpy>=1.6.2",
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "plotly>=6.6.0",
    "polars>=1.39.2",
    "pydeck>=0.9.1",
    "streamlit>=1.55.0",
]
[tool.uv]
managed = true
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
app = "streamlit:run_app"
